ARM32: assert on UnsafeJlong mutex rank check

XMLWordPrintable

    • 14
    • b24
    • arm
    • generic

      After JDK-8184732 change the new assert fires in Mutex::Mutex on UnsafeJlong_lock mutex:
      assert(_rank > special || _allow_vm_block,
               "Special locks or below should allow the vm to block");

      How to reproduce:
      arm32$ ./jdk-14/fastdebug/bin/java -version
      Segmentation fault

      gdb call stack:
      #0 0xb66e3d78 in Mutex::Mutex(int, char const*, bool, Mutex::SafepointCheckRequired)
      #1 0xb66e8f7c in mutex_init()
      #2 0xb61e3e84 in vm_init_globals()
      #3 0xb6a775f4 in Threads::create_vm(JavaVMInitArgs*, bool*)
      #4 0xb6367f84 in JNI_CreateJavaVM ()
      #5 0xb6fb57f4 in JavaMain ()

            Assignee:
            Boris Ulasevich
            Reporter:
            Boris Ulasevich
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: