8233113: ARM32: assert on UnsafeJlong mutex rank check

Reviewed-by: coleenp, dholmes